# fast-mysql-dump

./: .gitattributes  .gitignore  Pipfile  Readme.md  example.py  lib_my.py  pyproject.toml  use_example.py
xz/doc/: COPYING-Windows.txt
xz/doc/manuals/: xz.txt
zstd/dll/: libzstd.lib
zstd/static/: libzstd_static.lib
