[tool.poetry]
name = "fast-mysql-dump"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "fast_mysql_dump" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mysqlclient = "^2.2.6"
paramiko = "^3.5.1"
zstandard = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
