[tool.poetry]
name = "fast-mysql-dump"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "fast_mysql_dump" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mysqlclient = "^2.2.7"
paramiko = "^4.0.0"
zstandard = "^0.25.0"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
