[project]
name = "fast-mysql-dump"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mysqlclient (>=2.2.7,<3.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "zstandard (>=0.25.0,<0.26.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
